# generalized-network-collector

./: .gitignore  LICENSE  README.md  collect_network_data.py  config.json  pyproject.toml  schema.sql  setup.py  test_collector.py
collectors/: base_collector.py  network_collector.py
