[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "generalized-network-collector"
version = "1.0.0"
description = "A generalized system for collecting and storing network information"
readme = "README.md"
authors = [{name = "CloudCurio", email = "blaine.winslow@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/cbwinslow/generalized-network-collector"
Repository = "https://github.com/cbwinslow/generalized-network-collector"

[project.scripts]
network-collector = "collect_network_data:main"